MZ-237 fix bid button direction in arabic

--- a/src/Mzayad.Web/Content/site-arabic.less
+++ b/src/Mzayad.Web/Content/site-arabic.less
@@ -23,7 +23,7 @@
     }
 
     @media (min-width: 768px) {
-        
+
         .navbar-brand {
             margin-left: 0;
             margin-right: -15px;
@@ -31,7 +31,7 @@
 
         .navbar-right {
             /*margin-right: 0;*/
-            margin-left: -15px;     
+            margin-left: -15px;
         }
 
         .navbar-header {
@@ -72,9 +72,9 @@
         padding-left: 0;
     }
 
-    .radio input[type="radio"], 
-    .radio-inline input[type="radio"], 
-    .checkbox input[type="checkbox"], 
+    .radio input[type="radio"],
+    .radio-inline input[type="radio"],
+    .checkbox input[type="checkbox"],
     .checkbox-inline input[type="checkbox"] {
         margin-right: -20px;
         margin-left: 0;
@@ -87,7 +87,7 @@
     .input-group-addon {
         border: 1px solid #ccc;
 
-        &:first-child {       
+        &:first-child {
             border-left: 0;
         }
 
@@ -96,7 +96,11 @@
         }
     }
 
-    #header-subscription{
-        float:left !important;
+    #header-subscription {
+        float: left !important;
+    }
+
+    .btn-bid {
+        padding-bottom: 6px;
     }
 }
