--- a/src/Mzayad.Web/Views/User/UserProfile.cshtml
+++ b/src/Mzayad.Web/Views/User/UserProfile.cshtml
@@ -109,6 +109,19 @@
                     </a>
                 </div>
             </div>
+            @if (Model.AreFriends)
+            {
+                <div class="row">
+                    <div class="col-md-12" style="text-align:right;padding-right:45px;">
+                        <a class="btn btn-default btn-rounded text-uppercase" style="padding: 5px 20px;margin-bottom: 10px;"
+                           href="@Url.Action("SendMessage", "Friends", new { area = "", userName = Model.User.UserName })">
+                            <i class="fa fa-fw fa-envelope"></i>
+                            @Global.Chat
+                        </a>
+                    </div>
+                </div>
+            }
+
         </div>
     </div>
 </div>
