MZ-243 fix user name validation status label style

--- a/src/Mzayad.Web/Views/Account/Register.cshtml
+++ b/src/Mzayad.Web/Views/Account/Register.cshtml
@@ -42,6 +42,7 @@
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
+            @Html.HiddenFor(i=>i.PhoneCountryCode)
 
             <section>
                 <div class="form-group">
