--- a/src/Mzayad.Web/Views/User/EditAccount.cshtml
+++ b/src/Mzayad.Web/Views/User/EditAccount.cshtml
@@ -24,6 +24,7 @@
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
+            @Html.HiddenFor(i => i.PhoneCountryCode)
 
             <section>
                 <div class="form-group">
