MZ-243 fix success message when username validation fail

--- a/src/Mzayad.Web/Views/Account/Register.cshtml
+++ b/src/Mzayad.Web/Views/Account/Register.cshtml
@@ -194,6 +194,10 @@
                     return;
                 }
 
+                if ($(this).hasClass("input-validation-error")) {
+                    return;
+                }
+
                 $("#username-validate").show().children("div").hide();
                 $("#username-checking").show();
 
