revert commit and test auction time zone bug

--- a/src/Mzayad.Web/Views/Shared/EditorTemplates/DateTimePicker.cshtml
+++ b/src/Mzayad.Web/Views/Shared/EditorTemplates/DateTimePicker.cshtml
@@ -7,12 +7,10 @@
 
     if (Model.HasValue)
     {
-        var astDate = Model.Value;
-        astDate = astDate.AddHours(-3);
-        date = astDate.ToString("dd/MM/yyyy");
-        dateTime = astDate.AddHours(-3).ToString("u"); // AST -> UTC
-        hour = astDate.Hour;
-        minute = astDate.Minute;
+        date = Model.Value.ToString("dd/MM/yyyy");
+        dateTime = Model.Value.AddHours(-3).ToString("u"); // AST -> UTC 
+        hour = Model.Value.Hour;
+        minute = Model.Value.Minute;
     }
 }
 
