MZ-196 new messages notification

--- a/src/Mzayad.Web/Views/Friends/SendMessage.cshtml
+++ b/src/Mzayad.Web/Views/Friends/SendMessage.cshtml
@@ -20,7 +20,7 @@
             </section>
             <section class="form-buttons">
                 <a class="btn btn-unstyled btn-rounded" href="@Request.UrlReferrer">@Global.Back</a>
-                <button type="submit" onclick="updateEditor();" class="btn btn-default">@Global.Send</button>
+                <button type="submit" onclick="updateEditor();" class="btn btn-default btn-rounded">@Global.Send</button>
             </section>
         }
     </div>
