MZ-250 update my account link

--- a/src/Mzayad.Web/Views/Shared/_Layout_UserMyAccount.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout_UserMyAccount.cshtml
@@ -27,5 +27,6 @@
 }
 else
 {
-    <li><a href="@Url.Action("SignIn", "Account", new { area = "", language = Html.Language() }, null)">@Global.MyAccount</a></li>
+    <li><a href="@Url.Action("SignIn", "Account", new { area = "", language = Html.Language() }, null)">@Global.SignIn</a></li>
+    <li><a href="@Url.Action("Register", "Account", new { area = "", language = Html.Language() }, null)">@Global.Register</a></li>
 }
