--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -307,7 +307,7 @@ else
 
                 self.lastBidFormatted = ko.computed(function() {
                     if (!self.lastBidAmount()) {
-                        return "";
+                        return "KD 0";
                     }
 
                     return "KD " + self.lastBidAmount();
