--- a/src/Mzayad.Web/Content/site-layout.less
+++ b/src/Mzayad.Web/Content/site-layout.less
@@ -196,6 +196,14 @@ body {
 
 .image-cell {
     width: 144px;
+
+    img {
+        background-color: #ccc;
+        padding: 0;
+        margin:auto;
+        width: 100%;
+        display:inline-block;
+    }
 }
 
 .fa-pad-left {
@@ -339,23 +347,26 @@ body {
     margin: 20px auto;
     text-align: center;
 
-    img{
+    img {
         width: 100px;
         display: inline-block;
-        margin:20px auto; 
-        padding:0px;       
+        margin: 20px auto;
+        padding: 0px;
     }
-    h1{
-        font-size:25px;
-        padding:0;
+
+    h1 {
+        font-size: 25px;
+        padding: 0;
         margin: 0;
-        margin-bottom:20px;
+        margin-bottom: 20px;
     }
-    p{
-        padding-bottom:20px;
-        font-size:18px;
+
+    p {
+        padding-bottom: 20px;
+        font-size: 18px;
     }
-    a{
+
+    a {
         color: #fff !important;
         text-decoration: underline;
     }
