--- a/src/Mzayad.Web/Views/Shared/_Layout_UserMyAccount.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout_UserMyAccount.cshtml
@@ -28,5 +28,5 @@
 else
 {
     <li><a href="@Url.Action("SignIn", "Account", new { area = "", language = Html.Language() }, null)">@Global.SignIn</a></li>
-    <li><a href="@Url.Action("Register", "Account", new { area = "", language = Html.Language() }, null)">@Global.Register</a></li>
+    <li><a id="register-link" href="@Url.Action("Register", "Account", new { area = "", language = Html.Language() }, null)">@Global.Register</a></li>
 }
