--- a/src/Mzayad.Web/Content/site-layout.less
+++ b/src/Mzayad.Web/Content/site-layout.less
@@ -43,6 +43,17 @@ body {
             }
         }
     }
+
+    #register-link {
+        background-color: #33ACE0;
+        color: #fff !important;
+        border-radius: 3px;
+        transition: opacity ease-in 0.3s;
+
+        &:hover {
+            opacity: 0.7;
+        }
+    }
 }
 
 .navbar-left {
